--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Master Technology Store - Pago con PayPhone</title>
+  <title>Master Technology Store</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>Master Technology</h1>
+    <h1>Master Technology Store</h1>
     <p>Componentes tecnológicos a tu alcance</p>
   </header>
 
